# sherpa

./: .gitignore  .gitlab-ci.yml  ARTIFACT_LICENSE.md  Cargo.toml  Dockerfile  README.md  grammar.hcg  index.html  index.xml  package-lock.json  public  rustfmt.toml  sitemap.xml  workspace.code-workspace
crates/cli/: Cargo.toml  bin.rs  main.rs
crates/radlr/: Cargo.toml  lib.rs
crates/radlr-ascript-beta/: Cargo.toml  build_db.rs  lib.rs  test.rs
crates/radlr-ascript-beta/types/: any.rs  ast_types.rs  database.rs  mod.rs  structure.rs
crates/radlr-build/: Cargo.toml  lib.rs  test_grammar.radlr
crates/radlr-build/targets/: mod.rs
crates/radlr-build/targets/common/: mod.rs
crates/radlr-build/targets/javascript/: javascript_ast_script.atat  javascript_bytecode_script.atat  mod.rs
crates/radlr-build/targets/rust/: lab.atat  mod.rs  rust_ast_script.atat  rust_bytecode_script.atat
crates/radlr-build/targets/typescript/: mod.rs  typescript_ast_script.atat
crates/radlr-core/: Cargo.toml  builder.rs  lib.rs  utils.rs
crates/radlr-core/compile/: mod.rs
crates/radlr-core/compile/ir/: build_ir.rs  optimize.rs
crates/radlr-core/compile/ir_beta/: build_ir.rs  mod.rs
crates/radlr-core/compile/states/: build_states.rs  build_states_beta.rs  mod.rs  test.rs
crates/radlr-core/grammar/: build_database.rs  build_grammar.rs  build_grammar_2.rs  compile.rs  mod.rs  utils.rs
crates/radlr-core/journal/: mod.rs
crates/radlr-core/parser/: mod.rs  radlr.rs  radlr_bc.rs  radlr_bc_ast.rs  radlr_bc_parser.rs
crates/radlr-core/test/: test_optimizations.rs  utils.rs
crates/radlr-core/types/: error.rs  error_types.rs  grammar.rs  grammar_db.rs  item.rs  mod.rs  optimize.rs  parse_state.rs  parser_config.rs  parser_db.rs  result.rs  symbol.rs  worker_pool.rs
crates/radlr-core/writer/: code_writer.rs
crates/radlr-lab/: Cargo.toml  lib.rs
crates/radlr-lab/serialize/: mod.rs
crates/radlr-rust-build/: Cargo.toml  builder.rs  lib.rs  test.rs
crates/radlr-rust-runtime/: Cargo.toml  lib.rs
crates/radlr-rust-runtime/deprecate/: ast.rs  error.rs  parse_context.rs  parser.rs  reader.rs  reader_utf8.rs
crates/radlr-rust-runtime/kernel/: parser_new.rs
crates/radlr-rust-runtime/llvm_parser/: mod.rs
crates/radlr-rust-runtime/parsers/: ast.rs  cst.rs  error_recovery.rs  fork.rs  mod.rs  recognizer.rs  token.rs
crates/radlr-rust-runtime/types/: ast.rs  bytecode.rs  bytecode_db.rs  context.rs  context_queue.rs  edit_input.rs  entrypoint.rs  parse_action.rs  parse_table_data.rs  parser.rs  parser_error.rs  parser_input.rs  range.rs  token.rs
crates/radlr-rust-runtime/types/cst/: edit.rs  nodes.rs  store.rs  writer.rs
crates/radlr-rust-runtime/utf8/: lookup_table.rs
crates/radlr-wasm/: Cargo.toml  error.rs  grammar.rs  lib.rs  lsp.rs  parser.rs
crates/radlr-wasm/types/: parser_config.rs
source/app/compile/: Cargo.toml  build.rs  main.rs
source/app/compile/app/: cli.rs  main.rs
source/app/compile/lib/: lib.rs  options.rs  source_types.rs
source/app/compile/src/: cli.rs  code_writer.rs  lib.rs  main.rs  output_rust.rs
source/lib/hctk/: Cargo.toml  lib.rs
source/lib/hctk/ascript/: ast_writer.rs  compile.rs  mod.rs  output_rust.rs  test.rs
source/lib/hctk/bytecode/: compile.rs  compile_bytecode.rs  compiler.rs  constants.rs  mod.rs
source/lib/hctk/debug/: assembly.md  assembly.rs  bytecode.rs  grammar.rs  items.rs  mod.rs  parser.rs
source/lib/hctk/deprecated_runtime/: error.rs
source/lib/hctk/grammar/: compile.rs  compile_grammar.rs  compiler.rs  item.rs  mod.rs  parse.rs  production.rs  uuid.rs
source/lib/hctk/primitives/: ascript.rs  ast.rs  ast_node.rs  asytrip.rs  ir_state.rs  item.rs  kernel_stack.rs  kernel_token.rs  (+2 more)
source/lib/sherpa-core/: Cargo.toml  build_link_data.rs  lib.rs  test.rs  util.rs
src/app/cli/: Cargo.toml  README.md  main.rs
src/lib/: Cargo.toml  README.md
src/lib/radlr/: Cargo.toml  lib.rs
src/lib/radlr-ascript/: Cargo.toml  compile.rs  errors.rs  output_base.rs  slot_ref.rs  test.rs
src/lib/radlr-ascript-beta/: Cargo.toml  build_db.rs  errors.rs  test.rs
src/lib/radlr-build/: .gitignore  Cargo.toml  lib.rs  test_grammar.radlr
src/lib/radlr-bytecode/: Cargo.toml  build_bytecode.rs
src/lib/radlr-core/: Cargo.toml  builder.rs  lib.rs  link_binary_parser.rs
src/lib/radlr-formatter/: Cargo.toml  test_formatter.rs
src/lib/radlr-llvm/: Cargo.toml  ascript_functions.rs  llvm_parser_build.rs  standard_functions.rs
src/lib/radlr-rust-build/: Cargo.toml  lib.rs  test.rs
src/lib/radlr-rust-runtime/: lib.rs
src/lib/radlr-test/: Cargo.toml  test_error_recovery.rs  utils.rs
src/lib/radlr-x86/: Cargo.toml  lib.rs
src/lib/sherpa/: Cargo.toml  lib.rs
src/lib/sherpa-ascript/: Cargo.toml  ast_example.rs  compile.rs  errors.rs  lib.rs  output_base.rs  slot_ref.rs  test.rs  types.rs
src/lib/sherpa-ascript-beta/: Cargo.toml  build_db.rs  errors.rs  lib.rs  test.rs
src/lib/sherpa-build/: Cargo.toml  lib.rs
src/lib/sherpa-bytecode/: Cargo.toml  build_bytecode.rs  lib.rs  test.rs
src/lib/sherpa-coder/: Cargo.toml  lib.rs  test_formatter.rs
src/lib/sherpa-core/: Cargo.toml  build_link_data.rs  builder.rs  lib.rs  link_binary_parser.rs  tasks.rs  util.rs  utils.rs
src/lib/sherpa-core-nuevo/: Cargo.toml  lib.rs  tasks.rs  utils.rs
src/lib/sherpa-formatter/: Cargo.toml  lib.rs  test_formatter.rs
src/lib/sherpa-llvm/: Cargo.toml  ascript_functions.rs  jit_parser.rs  lib.rs  llvm_parser_build.rs  parse_functions.rs  standard_functions.rs  test.rs  types.rs
src/lib/sherpa-proc/: lib.rs
src/lib/sherpa-rust-build/: Cargo.toml  builder.rs  lib.rs  test.rs  test_grammar.sg
src/lib/sherpa-rust-rt/: lib.rs
src/lib/sherpa-rust-runtime/: Cargo.toml  build.rs  lib.rs  profiler.rs
src/lib/sherpa-test/: Cargo.toml  lib.rs  test_cst.rs  test_error_recovery.rs  test_fork.rs  utils.rs
src/lib/sherpa-x86/: Cargo.toml  lib.rs
src/web/sherpa-wasm/: Cargo.toml  error.rs  grammar.rs  lib.rs  lsp.rs  parser.rs
test/json_parser/: Cargo.toml  build.rs  json.sg  lib.rs  main.rs
test/json_parser/benches/: bench.rs
(+1324 files in other folders)
