[workspace]

members = [
    "source/app/cli",
    "source/lib/sherpa",
    "source/lib/sherpa-proc",
    "source/lib/sherpa-core",
    "source/lib/sherpa-rust-rt",
    "source/lib/sherpa-wasm",
    "test/json_parser",
    "test/e2e/proc_macro"
]

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0