[workspace]

members = [
    "./crates/cli",
    "./crates/radlr",
    "./crates/radlr-build",
    "./crates/radlr-core", 
    "./crates/radlr-bytecode",
    "./crates/radlr-rust-runtime",
    "./crates/radlr-test",
    "./crates/radlr-formatter",
    "./crates/radlr-ascript",
    "./crates/radlr-wasm",
    "./crates/radlr-lab"
]

exclude = [
  "test"
]

resolver = "2"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0

[profile.release-with-debug]
inherits = "release"
debug = true
