[package]
name = "radlr_ascript_beta"
version = "1.0.1-beta1"
edition = "2021"
authors = ["Anthony Weathersby <acweathersby.codes@gmail.com>"]

[lib]
path ="./lib.rs"

[dependencies]
radlr_core          = { path="../radlr-core" }
radlr_rust_runtime  = { path="../radlr-rust-runtime" }
radlr_formatter     = { path="../radlr-formatter" }
