[package]
name = "radlr_lab"
version = "1.0.1-beta2"
edition = "2021"

[lib]
name = "radlr_lab"
path = "./lib.rs"

[dependencies]
radlr_core          = { path="../radlr-core" }
radlr_ascript       = { path="../radlr-ascript" }
radlr_bytecode      = { path="../radlr-bytecode" }
radlr_formatter     = { path="../radlr-formatter" }
radlr_build         = { path="../radlr-build" }
radlr_rust_runtime  = { path="../radlr-rust-runtime" }
tungstenite         = { version="0.24.0", optional = true }


[features]
host = ["tungstenite"]
client =  ["wasm-bindgen"]

[profile.release]
opt-level=3
panic = 'abort'
lto = true
debug = 0


[dependencies.wasm-bindgen]
optional = true
version = "0.2.87"