[package]
name = "radlr_rust_build"
version = "1.0.1-beta1"
edition = "2021"

[lib]
#proc-macro = true
path = "./lib.rs"

[dependencies]
radlr_core          = { path="../radlr-core", features = ["auto_print_errors"] }
radlr_bytecode      = { path="../radlr-bytecode" }
radlr_ascript       = { path="../radlr-ascript" }
radlr_rust_runtime  = { path="../radlr-rust-runtime" }
