[package]
name = "radlr_rust_runtime"
version = "1.0.1-beta1"
edition = "2021"

[lib]
path = "./lib.rs"

[features]
wasm-lab = ["wasm-bindgen", "web-sys"]

[dependencies.wasm-bindgen]
optional = true
version = "0.2.87"

[dependencies.web-sys]
optional = true
version = "0.3.64"
features = [ 'console' ]