[package]
name = "radlr-wasm"
version = "1.0.0-beta1"
edition = "2021"
authors = ["Anthony Weathersby <acweathersby.codes@gmail.com>"]

[lib]
path ="./lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.64"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dependencies.radlr_core]
path = "../radlr-core"
features = ["wasm-lab"]

[dependencies.radlr_rust_build]
path = "../radlr-rust-build"

[dependencies.radlr_rust_runtime]
path = "../radlr-rust-runtime"
features = ["wasm-lab"]

[dependencies.radlr_bytecode]
path = "../radlr-bytecode"


[dev-dependencies]
wasm-bindgen-test = "0.3.37"



[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'console'
]