[package]
name = "radlr"
version = "1.0.1-beta1"
edition = "2021"

[lib]
path ="./lib.rs"

[dependencies]
radlr_core          = { path="../radlr-core" }
radlr_ascript       = { path="../radlr-ascript" }
radlr_bytecode      = { path="../radlr-bytecode" }
radlr_build         = { path="../radlr-build" }