[workspace]

members = [
    "./sherpa",
    "./sherpa-rust-build",
    "./sherpa-core",
    "./sherpa-ascript",
    "./sherpa-bytecode",
    "./sherpa-llvm",
    "./sherpa-x86",
    "./sherpa-rust-runtime",
    "./sherpa-test",
    "./sherpa-coder",
]

resolver = "2"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0
