[workspace]

members = [
    "./sherpa",
    "./sherpa-rust-build",
    "./sherpa-build",
    "./sherpa-core", 
    "./sherpa-ascript",
    "./sherpa-bytecode",
    "./sherpa-x86",
    "./sherpa-rust-runtime",
    "./sherpa-test",
    "./sherpa-formatter",
    "./sherpa-ascript-beta",
]

resolver = "2"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0
