[workspace]

members = [
    "./radlr",
    "./radlr-rust-build",
    "./radlr-build",
    "./radlr-core", 
    "./radlr-ascript",
    "./radlr-bytecode",
    "./radlr-x86",
    "./radlr-rust-runtime",
    "./radlr-test",
    "./radlr-formatter",
    "./radlr-ascript-beta",
]

resolver = "2"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
debug = 0
