[package]
name = "json-test-parser"
version = "0.0.0"
edition = "2021"

build = "./build.rs"

[lib]
name = "json_test_parser"
path = "./lib.rs"

[[bin]]
name = "json_test_parser_bin"
path = "./main.rs"

[dev-dependencies]
criterion = "0.4.0"

[build-dependencies.sherpa]
path = "../../src/lib/sherpa"

[dependencies.sherpa_runtime]
path = "../../src/lib/sherpa-rust-rt"

[profile.release]
opt-level = 3              # Use slightly better optimizations.
overflow-checks = false

[profile.dev]
opt-level = 3 
debug = 0              # Use slightly better optimizations.
overflow-checks = false

[[bench]]
name = "bench"
harness = false