[package]
name = "hc-compile"
version = "0.2.0"
edition = "2021"
build = "build.rs"


[[bin]]
name = "hc-compile"
path = "./app/main.rs"

[dependencies]
clap = "4.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"]}


[build-dependencies]
clap = "4.0.0"
clap_complete = "4.0.0"

[dependencies.hctk_core]
path = "../../lib/hctk-core"

[dependencies.hctk_compile]
path = "../../lib/hctk-compile"

