[package]
name = "sherpa-compile"
version = "1.0.0-beta1"
edition = "2021"
build = "build.rs"


[[bin]]
name = "sherpa-compile"
path = "./app/main.rs"

[dependencies]
clap = "4.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"]}


[build-dependencies]
clap = "4.0.0"
clap_complete = "4.0.0"

[dependencies.sherpa_core]
path = "../../lib/sherpa-core"

[dependencies.sherpa_compile]
path = "../../lib/sherpa-compile"

