[package]
name = "hctk"
version = "0.2.0"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.6"
lsp-server = "0.6.0"
serde_json = "1.0.81"
serde = "1.0.137"
lsp-types = "0.93.0"
bitmask-enum = "2.0.0"
crossbeam = "0.8.1"
siphasher = "0.3.10"

[dev-dependencies]
coz = "0.1.3"
bumpalo = "3.10.0"

[profile.dev]
debug = 2

[profile.release]
opt-level=3
 