[package]
name = "sherpa_core"
version = "1.0.0-beta1"
edition = "2021"
authors = ["Anthony Weathersby <acweathersby.codes@gmail.com>"]

build="./build_link_data.rs"

[lib]
path = "./lib.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", rev="3c5d7706861aac0750b4f0c98d6fcf8a91a2ca0a", features = ["llvm14-0"], optional=true}
sherpa_runtime = {path = "../sherpa-rust-rt"}


[features]

# Enables the use of the LLVM build pipeline
llvm = ["dep:inkwell"]

# Uses the binary parser instead of the bytecode parser. This parser needs
# have been built for the current platform before it can be used.
sherpa-binary-parser = []

# Disable portions of the code base that incompatable with a wasm target
wasm-target = []

# Disables multi-threading code
single-thread = []
