[package]
name = "sherpa-cli"
version = "1.0.0-beta1"
edition = "2021"

[[bin]]
name = "sherpa"
path = "./main.rs"

[features]
# Enable builds using llvm 
llvm = ["dep:sherpa_llvm"]

[dependencies]
clap = { version="4.0.29" }

[dependencies.sherpa_core]
path = "../../lib/sherpa-core"
features = ["auto_print_errors"]

[dependencies.sherpa_ascript]
path = "../../lib/sherpa-ascript"

[dependencies.sherpa_bytecode]
path = "../../lib/sherpa-bytecode"

[dependencies.sherpa_llvm]
path = "../../lib/sherpa-llvm"
optional = true

[dependencies.sherpa_rust_build]
path = "../../lib/sherpa-rust-build"



[profile.release]
opt-level=3
panic = 'abort'
lto = true
debug = 0