[package]
name = "radlr-cli"
version = "1.0.0-beta1"
edition = "2021"

[[bin]]
name = "radlr"
path = "./main.rs"

[dependencies]
clap = { version="4.0.29" }

[dependencies.radlr_core]
path = "../../lib/radlr-core"
features = ["auto_print_errors"]

[dependencies.radlr_ascript]
path = "../../lib/radlr-ascript"

[dependencies.radlr_bytecode]
path = "../../lib/radlr-bytecode"

[dependencies.radlr_rust_build]
path = "../../lib/radlr-rust-build"

[dependencies.radlr_formatter]
path = "../../lib/radlr-formatter"

[dependencies.radlr_ascript_beta]
path = "../../lib/radlr-ascript-beta"

[profile.release]
opt-level=3
panic = 'abort'
lto = true
debug = 0