[package]
name = "radlr_llvm"
version = "1.0.0-beta1"
edition = "2021"
authors = ["Anthony Weathersby <acweathersby.codes@gmail.com>"]

[lib]
path ="./lib.rs"

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", rev="3c5d7706861aac0750b4f0c98d6fcf8a91a2ca0a", features = ["llvm14-0"], optional=false}

[dependencies.radlr_core]
path = "../radlr-core"

[dependencies.radlr_rust_runtime]
path = "../radlr-rust-runtime"
