[package]
name = "radlr_test_suite"
version = "1.0.0-beta1"
edition = "2021"

[lib]
#proc-macro = true
path = "./lib.rs"

[dependencies]
radlr_core = { path = "../radlr-core" }
radlr_bytecode = { path = "../radlr-bytecode" }
radlr_ascript = { path = "../radlr-ascript" }
radlr_rust_runtime = { path = "../radlr-rust-runtime" }

