[package]
name = "radlr-x86"
version = "1.0.0-beta1"
edition = "2021"
authors = ["Anthony Weathersby <acweathersby.codes@gmail.com>"]

[lib]
path ="./lib.rs"

[dependencies.radlr_core]
path = "../../lib/radlr-core"
features = ["wasm-target" ]

[dependencies.radlr_rust_runtime]
path = "../../lib/radlr-rust-runtime"
