[package]
name = "radlr"
version = "1.0.0-beta1"
edition = "2021"

[lib]
path ="./lib.rs"

[dependencies.radlr_core]
path = "../radlr-core"

[dependencies.radlr_ascript]
path = "../radlr-ascript"

[dependencies.radlr_bytecode]
path = "../radlr-bytecode"

[dependencies.radlr_llvm]
path = "../radlr-llvm"

[dependencies.radlr_rust_build]
path = "../radlr-rust-build"


