[package]
name = "sherpa_build"
version = "0.0.0"
edition = "2021"

[lib]
path = "./lib.rs"

[dependencies.sherpa_core]
path = "../sherpa-core"
features = ["auto_print_errors"]

[dependencies.sherpa_rust_runtime]
path = "../sherpa-rust-runtime"

[dependencies.sherpa_ascript]
path = "../sherpa-ascript"

[dependencies.sherpa_bytecode]
path = "../sherpa-bytecode"

[dependencies.sherpa_formatter]
path = "../sherpa-formatter"

[dependencies.sherpa_ascript_beta]
path = "../sherpa-ascript-beta"