[package]
name = "sherpa_core"
version = "1.0.0-beta2"
edition = "2021"
authors = ["Anthony Weathersby <acweathersby.codes@gmail.com>"]

[lib]
path = "./lib.rs"

[dependencies]
sherpa_rust_runtime = {path = "../sherpa-rust-runtime"}

[features]

# Uses the binary parser instead of the bytecode parser. This parser needs
# have been built for the current platform before it can be used.
sherpa-binary-parser = []

# Disable code that is incompatible with wasm-build
wasm-target = []

# Enable multi-threading code
multithread = []
