[package]
name = "sherpa_test_suite"
version = "1.0.0-beta1"
edition = "2021"

[lib]
#proc-macro = true
path = "./lib.rs"

[dependencies]
sherpa_core = { path = "../sherpa-core" }
sherpa_bytecode = { path = "../sherpa-bytecode" }
sherpa_ascript = { path = "../sherpa-ascript" }
sherpa_rust_runtime = { path = "../sherpa-rust-runtime" }

