[package]
name = "sherpa-x86"
version = "1.0.0-beta1"
edition = "2021"
authors = ["Anthony Weathersby <acweathersby.codes@gmail.com>"]

[lib]
path ="./lib.rs"

[dependencies.sherpa_core]
path = "../../lib/sherpa-core"
features = ["wasm-target" ]

[dependencies.sherpa_runtime]
path = "../../lib/sherpa-rust-rt"
