[package]
name = "sherpa"
version = "1.0.0-beta1"
edition = "2021"

[lib]
path ="./lib.rs"

[dependencies.sherpa_core]
path = "../sherpa-core"

[dependencies.sherpa_ascript]
path = "../sherpa-ascript"

[dependencies.sherpa_bytecode]
path = "../sherpa-bytecode"

[dependencies.sherpa_llvm]
path = "../sherpa-llvm"

[dependencies.sherpa_proc]
path = "../sherpa-proc"


